# bbq-sg-template

./: .gitignore  bbq-sg-template.cabal  stack.yaml
css/: common.css  doge.css
js/: common.js  doge.js
post/: 2014-04-24-example.md  example.md
src/: Config.hs  Main.hs
src/Render/: Index.hs  Post.hs  Wiki.hs
templates/: index.hamlet  post-index.hamlet  post.hamlet  wiki.hamlet
